fixes alignment on VRN text

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,6 +230,10 @@ input, select, textarea {
 .vrn-med {
     font-size: 50px;
     font-weight: 600;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .electric-med {
